footer outline implemented

--- a/index.html
+++ b/index.html
@@ -16,7 +16,29 @@
 
 
 
-
+<footer>
+    <div>
+        <h3>Tesla 2021</h3>
+    </div>
+    <div>
+        <h3>Privacy & Legal</h3>
+    </div>
+    <div>
+        <h3>Contact</h3>
+    </div>
+    <div>
+        <h3>Careers</h3>
+    </div>
+    <div>
+        <h3>News</h3>
+    </div>
+    <div>
+        <h3>Engage</h3>
+    </div>
+    <div>
+        <h3>Locations</h3>
+    </div>
+</footer>
 
     <script src="script.js"></script>
 </body>
