May 4th Upload w/ Footer again

--- a/index.html
+++ b/index.html
@@ -147,6 +147,33 @@
 
    </section> <!-- end section fullPage -->
 
+
+   <!-- <footer>
+    <div>
+        <h3>Tesla 2021</h3>
+    </div>
+    <div>
+        <h3>Privacy & Legal</h3>
+    </div>
+    <div>
+        <h3>Contact</h3>
+    </div>
+    <div>
+        <h3>Careers</h3>
+    </div>
+    <div>
+        <h3>News</h3>
+    </div>
+    <div>
+        <h3>Engage</h3>
+    </div>
+    <div>
+        <h3>Locations</h3>
+    </div>
+</footer> -->
+
+
+
    <script
    src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
    integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
