--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 />
     <link rel="stylesheet" href="body.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="reset.css">
     <title>Tesla Clone</title>
 </head>
 
