Morning 5/5 commit of css.3

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="variable.css">
     <title>Tesla Clone</title>
 </head>
-
-<!-- <div class="blur__overlay"></div>
+<body>
+<div class="blur__overlay"></div>
     
 <header class="header">
     <a class="header__left" href="#">
@@ -58,10 +59,9 @@
             <a class="nav__link" href="#">Solar Roofs</a>
         </li>
         <li class="link__in__middle">
-            <a class="nav__link" href="#">Solar Panels</a> -->
+            <a class="nav__link" href="#">Solar Panels</a>
 
-
-<body>
+            <!-- Sections -->
 
    <section id="fullPage">
 
@@ -152,9 +152,9 @@
    </section> <!-- end section fullPage -->
 
 
-   <!-- <footer>
+   <footer>
     <div>
-        <h3>Tesla 2021</h3>
+        <h3>Tesla © 2021</h3>
     </div>
     <div>
         <h3>Privacy & Legal</h3>
@@ -174,7 +174,7 @@
     <div>
         <h3>Locations</h3>
     </div>
-</footer> -->
+</footer>
 
 
 
