--- a/solarpanels.html
+++ b/solarpanels.html
@@ -1,10 +1,17 @@
-<section class="section five">
-    <div class="section__content">
-        <h1 class="section__content__title">solar panels</h1>
-        <h2 class="section__content__subtitle">Lowest Cost Solar Panels in America</h2>
-    </div>
-    <div class="section__action__container">
-        <a class="section__action__btnaction__btn__primary" href="#">Order now</a>
-        <a class="section__action__btn action__btn__secondary" href="#">Learn more</a>
-    </div>
+<head>
+  <link rel="stylesheet" href="solarpanels.css" />
+</head>
+<section class="section__five">
+  <div class="section__content">
+    <h1 class="section__content__title">solar panels</h1>
+    <h2 class="section__content__subtitle">
+      Lowest Cost Solar Panels in America
+    </h2>
+  </div>
+  <div class="section__action__container">
+    <a class="section__action__btnaction__btn__primary" href="#">Order now</a>
+    <a class="section__action__btn action__btn__secondary" href="#"
+      >Learn more</a
+    >
+  </div>
 </section>
