add nav links to html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="header__nav__btn menu__btn" href="#">menu</a>
     </div>
 </header>
-
+<body>
 <nav class="navigation">
     <div class="close__btn__container">
         <img class="navigation__close__btn" src="https://thatanjan.github.io/tesla-clone-yt/media/close_icon.svg" alt="" />
@@ -57,7 +57,20 @@
         </li>
         <li class="link__in__middle">
             <a class="nav__link" href="#">Solar Panels</a>
-
+        </li>
+        <li><a class="nav__link" href="#">Existing Inventory </a></li>
+				<li><a class="nav__link" href="#">Used Inventory </a></li>
+				<li><a class="nav__link" href="#">Trade-In </a></li>
+				<li><a class="nav__link" href="#">Test drive </a></li>
+				<li><a class="nav__link" href="#">Powerwall </a></li>
+				<li><a class="nav__link" href="#">Commercial Energy </a></li>
+				<li><a class="nav__link" href="#">utilities </a></li>
+				<li><a class="nav__link" href="#">Charging</a></li>
+				<li><a class="nav__link" href="#">Find us</a></li>
+				<li><a class="nav__link" href="#">Support</a></li>
+				<li><a class="nav__link" href="#">Investor Relations</a></li>
+			</ul>
+</nav>
             <!-- Sections -->
 
    <section id="fullPage">
